--- a/src/app/Componentes/1.login/login.component.html
+++ b/src/app/Componentes/1.login/login.component.html
@@ -3,6 +3,8 @@
     <div class="aux"><img src="./assets/img/escudo.png" alt="" /></div>
 
     <form class="formRegistro" action="" *ngIf="usuarioExiste">
+        <h5>Modificando el componente Login 2</h5>
+        <h5>Modificando el componente Login</h5>
         <h2>Primera vez que entras?</h2>
         <h3>Registrate</h3>
         <div class="fila">
@@ -17,6 +19,7 @@
                     name="usuario" autocomplete="off" />
             </div>
         </div>
+
         <div class="fila">
             <div class="subfila">
                 <label>Nombres:</label>
